--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,6 +4,7 @@
   --accent-font: PressStart2P;
   --main-font-wght: 400;
   --accent-font-wght: 700;
+  --small-font-size: 0.875rem;
   --text-font-size: 1.125rem;
   --topic-font-size: clamp(3.063rem, 2.7109rem + 1.5023vw, 4.063rem);
   --topic-note-font-size: clamp(0.875rem, 0.6768rem + 0.8458vw, 1.438rem);
