--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,96 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+.sparks {
+  fill: var(--accent-heart-color, #ff0000);
+  opacity: 0;
+}
+
+.like-icon .core {
+  fill: var(--accent-color, #000);
+  opacity: 0;
+  transition: opacity 0.03s 0.3s ease-in;
+}
+
+.like-icon .main-body {
+  fill: var(--accent-color, #000);
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
+}
+
+.like-icon:hover .core {
+  opacity: 1;
+  transition: opacity 0.3s ease-in;
+}
+
+.like-icon:hover .main-body {
+  opacity: 1;
+  transition: opacity 0.05s 0.3s ease-in;
+}
+
+.like-icon:active .core {
+  fill: var(--accent-heart-color, #ff0000);
+  transition: fill 0.3s ease-in;
+}
+
+.like-icon:active .main-body {
+  fill: var(--accent-heart-color, #ff0000);
+  transition: fill 0.05s 0.3s ease-in;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--accent-heart-color, #ff0000);
+  opacity: 1;
+  transition: opacity 0.3s ease-in, fill 0.3s ease-in;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--accent-heart-color, #ff0000);
+  opacity: 1;
+  transition: opacity 0.05s 0.3s ease-in, fill 0.05s 0.3s ease-in;
+  /* transition: fill 0.3s ease-in; */
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--accent-heart-color, #ff0000);
+  transition: fill 0.06s 0.3s ease-in;
+}
+
+.like-icon .contour {
+  fill: var(--accent-heart-contour-color, #000);
+  transition: fill 0.1s linear;
+}
+
+.heart {
+}
+
+.like-icon.is-liked .heart {
+  transform-origin: center;
+  animation: heart-beat 0.3s ease-in 0.1s 1 normal backwards;
+}
+
+.like-icon.is-liked .sparks {
+  animation: heart-sparks 0.3s ease-in 0.3s 1 normal backwards;
+}
+
+@keyframes heart-beat {
+  from {
+    scale: 1;
+  }
+  to {
+    scale: 1.25;
+  }
+}
+
+@keyframes heart-sparks {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.card__icon-button:active {
+}
