--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,8 @@
 }
 
 * {
-  outline: 1px solid red;
-  outline-offset: -1px;
+  /* outline: 1px solid red; */
+  /* outline-offset: -1px; */
 }
 
 body {
