--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,6 @@
 @media (width < 376px) {
   .card__icon-button {
-    padding: 0 0 0px 0;
+    padding: 0px;
     width: 39px;
     height: 38px;
     border: none;
