--- a/styles/style.css
+++ b/styles/style.css
@@ -74,8 +74,8 @@
   inline-size: clamp(23.438rem, 16.2859rem + 30.5157vw, 43.75rem);
 }
 
-.cards__item {
-}
+/* .cards__item {
+} */
 
 .card {
   display: flex;
@@ -107,7 +107,9 @@
   aspect-ratio: 1/1;
   object-fit: cover;
   /* object-position: calc(100% + 20px) calc(100% + 6px); */
-  object-position: bottom right;
+  /* object-position: bottom right; */
+  object-position: center;
+
   /* position: relative; */
   background-color: transparent;
 }
@@ -124,21 +126,25 @@
   text-transform: uppercase;
   opacity: 0.5;
   mix-blend-mode: hard-light;
-  -webkit-text-stroke: 1px var(--stroke-color, #fff);
+  text-shadow: -1px -1px var(--stroke-color, #fff),
+    1px 1px var(--stroke-color, #fff), -1px 1px var(--stroke-color, #fff),
+    1px -1px var(--stroke-color, #fff);
+  /* -webkit-text-stroke: 1px var(--stroke-color, #fff); */
+}
+
+@supports (-webkit-text-stroke: 1px var(--stroke-color, #fff)) {
+  .watermark {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--stroke-color, #fff);
+  }
 }
 
 .image__label_html::after {
   content: "&lt;/HTML&gt;";
 }
 
-@supports (text-stroke: 1px var(--stroke-color, #fff)) {
-  .watermark {
-    text-stroke: 1px var(--stroke-color, #fff);
-  }
-}
-
-.no_effect {
-}
+/* .no_effect {
+} */
 
 .card__description {
   display: flex;
@@ -276,6 +282,7 @@ body:has(.dialog__save[open]) {
 .dialog__button_save_close {
   inline-size: 100%;
   padding: 10.5px 0;
+  position: relative;
   font-family: var(--accent-font, fantasy);
   font-size: var(--small-font-size, 0.875rem);
   font-weight: inherit;
@@ -285,6 +292,7 @@ body:has(.dialog__save[open]) {
   text-transform: uppercase;
 }
 
+.dialog__button_save_close:focus-visible,
 .card__like-button:focus-visible,
 .card__save_memory-button:focus-visible {
   outline: none;
@@ -293,6 +301,7 @@ body:has(.dialog__save[open]) {
   transition: box-shadow 0.5s ease-in-out;
 }
 
+.dialog__button_save_close::after,
 .card__like-button::after,
 .card__save_memory-button::after {
   content: "";
@@ -302,8 +311,11 @@ body:has(.dialog__save[open]) {
   inline-size: 0%;
   inset: 0 0;
   background-color: var(--stroke-color, #fff);
+  mix-blend-mode: difference;
+  transition: inline-size 0.5s ease-in-out;
 }
 
+.dialog__button_save_close:hover::after,
 .card__like-button:hover::after,
 .card__save_memory-button:hover::after {
   inline-size: 100%;
@@ -311,18 +323,57 @@ body:has(.dialog__save[open]) {
   transition: inline-size 0.5s ease-in-out;
 }
 
+/* .dialog__button_save_close::after,
 .card__like-button::after,
 .card__save_memory-button::after {
   inline-size: 0%;
   mix-blend-mode: difference;
   transition: inline-size 0.5s ease-in-out;
-}
+} */
 
 .card__icon-button:focus-visible {
   -webkit-text-stroke: none;
   outline: 2px solid var(--accent-color, #000);
   outline-offset: -2px;
   transition: outline 0.3s ease;
+}
+
+@media (pferers-reduced-motion) {
+  .like-icon.is-liked .sparks {
+    animation: none;
+  }
+}
+
+.picture_filter_brightness {
+  filter: brightness(50%);
+}
+
+.picture_filter_contrast {
+  filter: contrast(200%);
+}
+
+.picture_filter_blur {
+  filter: blur(0.15rem);
+}
+
+.picture_filter_opacity_grayscale_invert {
+  filter: opacity(0.6) grayscale(0.7) invert(0.8);
+}
+
+.picture_filter_saturate {
+  filter: saturate(200%);
+}
+
+.picture_filter_hue-rotate {
+  filter: hue-rotate(90deg);
+}
+
+.picture_filter_sepia {
+  filter: sepia(80%);
+}
+
+.picture_filter_invert {
+  filter: invert(0.2);
 }
 
 /* .card__like-button:hover .button__text,
