--- a/styles/style.css
+++ b/styles/style.css
@@ -219,10 +219,10 @@
   grid-template-rows: min-content min-content;
   place-items: center;
   gap: 30px;
-  padding: 30px calc(4.5rem - clamp(1.875rem, 1.6109rem + 1.1268vw, 2.625rem));
+  padding: 30px calc(4.375rem - clamp(1.875rem, 1.6549rem + 0.939vw, 2.5rem));
   border: 2px solid #000;
-  max-block-size: calc(100% - 2em + 2px);
-  max-inline-size: calc(100% - 2em + 2px);
+  max-block-size: 100%;
+  max-inline-size: 100%;
   /* margin: auto clamp(1.063rem, -10.4574rem + 49.1538vw, 33.781rem); */
   /* display: grid;
   grid-auto-flow: column;
